<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        tools:context=".LoggInn">

        <ImageButton
            android:id="@+id/btnTilbake"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            app:srcCompat="@drawable/ic_arrow_back"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="100dp"
            android:text="@string/logg_inn"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/loginBrukernavn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_round"
            app:drawableLeftCompat="@drawable/ic_personperson"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/brukernavn"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/loginPassord"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/edit_round"
            app:drawableLeftCompat="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/passord"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/loginKnapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_button"
            android:onClick="loginBtn"
            android:text="@string/logg_inn"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/registerHer"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/registrer"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:focusable="true" />

    </LinearLayout>
</ScrollView>



